# wonkyconn

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.datalad/: config
.github/workflows/: docker.yml  test.yml  validate_cff.yml
data/atlases/: atlas-BrainnetomeCombined_dseg.tsv  atlas-Brainnetome_dseg.tsv  atlas-Buckner2011_dseg.tsv  atlas-DiFuMo_dim-1024_probseg.tsv  atlas-DiFuMo_dim-256_probseg.tsv  atlas-DiFuMo_dim-64_probseg.tsv  atlas-ENIGMATaskBasedFMRIRegionsOfInterest_dseg.tsv  atlas-FreeSurfer_dseg.tsv  atlas-HCPMM1Combined_dseg.tsv  atlas-HCPMM1_dseg.tsv  atlas-Power2011_dseg.tsv  atlas-Schaefer2018Combined_dseg.tsv  atlas-UKBiobankTFMRI_dseg.tsv
data/giga_connectome/connectome_Schaefer20187Networks_dev/: dataset_description.json  meas-PearsonCorrelation_relmat.json
data/giga_connectome/connectome_Schaefer20187Networks_dev/logs/: CITATION.md
data/giga_connectome/connectome_Schaefer20187Networks_dev/sub-1/ses-timepoint1/func/: sub-1_ses-timepoint1_task-selectivestopsignaltask_run-02_desc-denoiseSimple_timeseries.json
data/halfpipe/: dataset_description.json  participants.tsv
data/halfpipe/derivatives/halfpipe/sub-10171/func/task-rest/: sub-10171_task-rest_feature-cCompCor_atlas-Schaefer2018Combined_desc-correlation_matrix.tsv  sub-10171_task-rest_feature-cCompCor_atlas-Schaefer2018Combined_timeseries.json  sub-10171_task-rest_feature-motionParametersGSR_atlas-Schaefer2018Combined_desc-correlation_matrix.tsv  sub-10171_task-rest_feature-motionParametersGSR_atlas-Schaefer2018Combined_timeseries.json  sub-10171_task-rest_feature-motionParametersScrubbingGSR_atlas-Schaefer2018Combined_desc-correlation_matrix.tsv  sub-10171_task-rest_feature-motionParametersScrubbingGSR_atlas-Schaefer2018Combined_timeseries.json  sub-10171_task-rest_feature-motionParametersScrubbing_atlas-Schaefer2018Combined_desc-correlation_matrix.tsv  sub-10171_task-rest_feature-motionParametersScrubbing_atlas-Schaefer2018Combined_timeseries.json  sub-10171_task-rest_feature-motionParameters_atlas-Schaefer2018Combined_desc-correlation_matrix.tsv  sub-10171_task-rest_feature-motionParameters_atlas-Schaefer2018Combined_timeseries.json
data/halfpipe/derivatives/halfpipe/sub-10273/func/task-rest/: sub-10273_task-rest_feature-cCompCor_atlas-Schaefer2018Combined_desc-correlation_matrix.tsv  sub-10273_task-rest_feature-cCompCor_atlas-Schaefer2018Combined_timeseries.json  sub-10273_task-rest_feature-motionParametersGSR_atlas-Schaefer2018Combined_desc-correlation_matrix.tsv  sub-10273_task-rest_feature-motionParametersGSR_atlas-Schaefer2018Combined_timeseries.json  sub-10273_task-rest_feature-motionParametersScrubbingGSR_atlas-Schaefer2018Combined_timeseries.json  sub-10273_task-rest_feature-motionParametersScrubbing_atlas-Schaefer2018Combined_timeseries.json  sub-10273_task-rest_feature-motionParameters_atlas-Schaefer2018Combined_desc-correlation_matrix.tsv  (+1 more)
docs/source/: changes.md
sandbox/: network-overlap.py  subject-network-overlap.py
sandbox/age_sex_predict/: scikit_pipeline.py  sklearn_multi_predict_HBN.py
wonkyconn/: atlas.py  base.py  correlation.py  logger.py  run.py  workflow.py
wonkyconn/data/gradients/: README.txt
wonkyconn/features/: age_sex_prediction.py  calculate_degrees_of_freedom.py  calculate_gradients_correlation.py  distance_dependence.py  gcor.py  network.py  quality_control_connectivity.py
wonkyconn/features/tests/: test_network.py
wonkyconn/file_index/: base.py
wonkyconn/tests/: conftest.py  figures_to_be_deleted.py  run_test_gradient.py  test_atlas.py  test_cli.py  test_correlation.py  test_gradients_correlation.py
wonkyconn/visualization/: plot.py
(+1371 files in other folders)
